# Schedulify

./: .gitignore  CMakeLists.txt  main.cpp  model_interfaces.h
controller/adapters/thread_workers/: ChatBot.cpp  ChatBot.h  ScheduleGenerator.cpp  ScheduleGenerator.h
controller/adapters/view_models/: course_model.cpp  course_model.h  file_model.cpp  file_model.h  schedule_model.cpp  schedule_model.h
controller/include/: course_selection.h  file_input.h  log_display.h  schedules_display.h
controller/src/: course_selection.cpp  file_input.cpp  schedules_display.cpp
logger/: logger.cpp  logger.h
model/: main_model.cpp
model/include/db/: ScheduleDatabaseWriter.h  cleanup_manager.h  db_courses.h  db_entities.h  db_files.h  db_json_helpers.h  db_manager.h  db_schedules.h  db_schema.h  db_utils.h  model_db_integration.h  schedule_filter_service.h
model/include/main/: inner_structs.h  main_model.h
model/include/parsers/: excel_parser.h  jsonParser.h  validate_courses.h
model/include/sched_bot/: claude_api_integration.h  sql_validator.h
model/include/schedule_algorithm/: CourseLegalComb.h  ScheduleBuilder.h  TimeUtils.h  getSession.h
model/src/db/: ScheduleDatabaseWriter.cpp  cleanup_manager.cpp  db_course.cpp  db_courses.cpp  db_files.cpp  db_json_helpers.cpp  db_manager.cpp  db_schedules.cpp  db_schema.cpp  db_utils.cpp  model_db_integration.cpp  schedule_filter_service.cpp
model/src/parsers/: excel_parser.cpp  jsonParser.cpp  validate_courses.cpp
model/src/sched_bot/: claude_api_integration.cpp  sql_validator.cpp
model/src/schedule_algorithm/: CourseLegalComb.cpp  ScheduleBuilder.cpp
tests/model-tests/: CourseLegalComb_test.cpp  ScheduleBuilder_test.cpp  excel_parser_test.cpp
view/: course_selection.qml  file_input.qml  log_display.qml  qml.qrc  schedules_display.qml
view/popups/: AddCoursePopup.qml  SchedBot.qml  SlotBlockMenu.qml
